[main] fix text alignment

--- a/src/editor/blocks/post-block/styles/style.scss
+++ b/src/editor/blocks/post-block/styles/style.scss
@@ -345,7 +345,7 @@
         text-align: center;
         .guten-block-loadmore {
             display: inline-flex;
-            text-align: center;
+            justify-content: center;
             cursor: pointer;
             border: 1px solid var(--guten-border-color, #eaeaeb);
             @include boxshadow(0 2px 4px rgba(0, 0, 0, 0.08));
